# airflow-provider-hex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  VERSION.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.circleci/: config.yml
airflow_provider_hex/: __init__.py  types.py
airflow_provider_hex/hooks/: hex.py
airflow_provider_hex/operators/: hex.py
dev/: Dockerfile  Makefile  README.md  docker-compose.yaml
example_dags/: example_hex.py
tests/: conftest.py
tests/hooks/: test_hex_hook.py
tests/operators/: test_hex_operator.py
